--- a/css/styles.css
+++ b/css/styles.css
@@ -4202,6 +4202,7 @@ body.menu-is-open {
     padding-top     : var(--vspace-5);
     padding-bottom  : var(--bottom-padding);
     color           : var(--color-gray-15);
+    position        : relative;
 }
 
 .s-footer h5 {
